<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_navigate_next_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_time_table"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/menu_time_table" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_overview" />

    </group>

    <item android:title="Konto">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_reply_black_24dp"
                android:title="@string/menu_sign_out" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
