<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.fahadali.intranet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/nav_time_table"
        android:name="com.fahadali.intranet.ui.schedule.ScheduleFragment"
        android:label="@string/menu_time_table"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.fahadali.intranet.ui.overview.OverviewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.fahadali.intranet.fragments.ui.send.SendFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_send" />
</navigation>