<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fahadali.intranet.ui.schedule.ScheduleFragment"
        android:label="@string/title_timetable"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.fahadali.intranet.ui.home.HomeFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.fahadali.intranet.ui.overview.OverviewFragment"
        android:label="@string/title_overview"
        tools:layout="@layout/fragment_overview" />
</navigation>